--- a/portfolio.css
+++ b/portfolio.css
@@ -82,6 +82,7 @@ li.selected {
 } 
 
 footer {
+	font-size:                      small;
 	font-size:                      60%;
     font-style:                     italic;
     text-align:                     center;
