--- a/portfolio-mobile.css
+++ b/portfolio-mobile.css
@@ -1,4 +1,4 @@
-@media screen and (min-width:480px) and (max-width:760px) {
+@media screen and (max-width:760px) {
 	body {
 	    font-size:                         75%;
 	}
