--- a/portfolio-mobile.css
+++ b/portfolio-mobile.css
@@ -1,4 +1,4 @@
-@media screen and (max-device-width:760px) {
+@media all and (max-width:480px) {
 	body {
 	    font-size:                         75%;
 	}
