Moved mobile media query to be included in main css file instead of separate file

--- a/resume/resume-mobile.css
+++ b/resume/resume-mobile.css
@@ -1,7 +1,9 @@
-.blogContent {
-	font-size:                         70%;
-}
-
-#sidebar, #sidebarMobile, .divider#sideBarMobileDivider {
-	display:                           none;
+@media only screen and (max-width:480px) {
+	.blogContent {
+		font-size:                         70%;
+	}
+	
+	#sidebar, #sidebarMobile, .divider#sideBarMobileDivider {
+		display:                           none;
+	}
 }
