--- a/portfolio-mobile.css
+++ b/portfolio-mobile.css
@@ -1,4 +1,4 @@
-@media all and (max-width:480px) {
+@media only screen and (max-width:480px) {
 	body {
 	    font-size:                         75%;
 	}
