--- a/portfolio.css
+++ b/portfolio.css
@@ -173,5 +173,69 @@ aside .contact a {
 	display:                       none;
 }
 
+@media only screen and (max-width:480px) {
+    body {
+        font-size:                         75%;
+    }
+    
+    .content {
+        width:                             100%;
+    }
+    
+    #sidebar {
+        display:                           none;
+    }
+    
+    #sidebarMobile {
+        display:                           block;
+        float:                             right;
+        font-size:                         60%;
+        border-left:                       1px solid;
+        border-bottom:                     1px solid;
+        padding:                           0px 5% 10px 10px;
+        margin:                            0px 0px 0px 0px;
+    }
+    
+    aside#sidebarMobile ul li {
+        list-style-type:                   none;
+    }
+    
+    article {
+        margin:                            auto;
+        padding-right:                     25%;
+        width:                             95%;
+    }
+    
+    ul li {
+        padding-right:                     10%;
+    }
+    
+    #sideBarMobileDivider {
+        display:                           block;   
+        height:                            1.5px;
+    }
+    
+    #footerDivider {
+        margin-top:                        60px;
+        height:                            1.5px;
+    }
+    
+    footer {
+        margin-left:                       30px;
+        margin-right:                      30px;
+    }
+    
+    .topOfList {
+        padding-top:                       0px;
+        margin-top:                        0px;
+    }
+    
+    nav ul li {
+        margin:                            auto;
+    }
+        
+        
+}
+
 
 
