--- a/resume/resume-print.css
+++ b/resume/resume-print.css
@@ -6,11 +6,15 @@ header, footer, sidebar, sidebarMobile, #printButton {
 
 @page {
     size:                              auto;
-    margin:                            0px;
+}
+#contactInfo {
+	font-size:                         85%;
+	color:                             black;
+	
 }
 
 .blogContent {
 	margin-top:                        30px;
 	color:                             black;
-	font-size:                         92%;
+	font-size:                         100%;
 }
