--- a/resume/resume-print.css
+++ b/resume/resume-print.css
@@ -4,17 +4,28 @@ header, footer, sidebar, sidebarMobile, #printButton {
 	display:                           none;
 }
 
+html {
+	margin:                            0px;
+	padding:                           0px;
+}
+
+body {
+	margin:                            0px;
+	padding:                           0px;
+}
+
 @page {
-    size:                              auto;
+    size:                              letter;
+    margin:                            0px;
+    margin-top:                        2cm;
+    padding:                           0px;
 }
 #contactInfo {
 	font-size:                         85%;
-	color:                             black;
-	
+	color:                             black;	
 }
 
 .blogContent {
-	margin-top:                        30px;
 	color:                             black;
 	font-size:                         100%;
 }
